# AlexIR

./: .gitmodules  CMakeLists.txt  README.md  platformio.ini
include/: wifi_pass.h
src/: arduino_main.cpp  main.cpp
